syntax = "proto3";

option go_package = "go_sv/protos";

message  EchoResponse {
    string Res = 1;
}

message  EchoRequest {
    string Req = 1;
}

service EchoService {
    rpc GetUnaryEcho (EchoRequest) returns (EchoResponse);
}
